--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,3 +3,8 @@
 // If you want to customize your project please add your variables below.
 
 $enable-deprecation-messages: false !default;
+
+
+:root {
+    --cui-breadcrumb-item-active-color: #1a67cca6;
+}
